--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "gulp-postcss": "^10.0.0",
     "gulp-sass": "^5.1.0",
     "sass": "^1.79.3"
+  },
+  "dependencies": {
+    "gulp-clean-css": "^4.3.0"
   }
 }
