--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "devDependencies": {
     "autoprefixer": "^10.4.20",
     "gulp": "^5.0.0",
+    "gulp-imagemin": "^9.1.0",
+    "gulp-minify": "^3.1.0",
+    "gulp-newer": "^1.4.0",
     "gulp-postcss": "^10.0.0",
     "gulp-sass": "^5.1.0",
     "sass": "^1.79.3"
