--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "gulp-newer": "^1.4.0",
     "gulp-postcss": "^10.0.0",
     "gulp-sass": "^5.1.0",
+    "imagemin-gifsicle": "^7.0.0",
+    "imagemin-jpegtran": "^7.0.0",
+    "imagemin-pngquant": "^10.0.0",
+    "imagemin-svgo": "^11.0.1",
     "sass": "^1.79.3"
   },
   "dependencies": {
