use bable intesnet sayed that whas important

--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.4",
     "autoprefixer": "^10.4.20",
     "gulp": "^5.0.0",
+    "gulp-babel": "^8.0.0",
     "gulp-imagemin": "^9.1.0",
     "gulp-minify": "^3.1.0",
     "gulp-newer": "^1.4.0",
     "gulp-postcss": "^10.0.0",
     "gulp-sass": "^5.1.0",
+    "gulp-uglify": "^3.0.2",
     "imagemin-gifsicle": "^7.0.0",
     "imagemin-jpegtran": "^7.0.0",
     "imagemin-pngquant": "^10.0.0",
